# work-calendar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linter.yml  tests.yml
data/: total.json
tests/: test_work_calendar.py
work_calendar/: __init__.py  exceptions.py  total.json
