[tool.poetry]
name = "work-calendar"
version = "0.1.0"
description = ""
authors = ["Roman Poliakov <roman61394@gmail.com>"]
readme = "README.md"
packages = [{include = "work_calendar"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
